--- a/museum/style/style.scss
+++ b/museum/style/style.scss
@@ -217,6 +217,7 @@ header {
     transform: translate(-20%, 0);
     transition: transform 0.5s;
     .louvre-image {
+        position: relative;
         width: 100%;
         height: auto;
         img {
@@ -246,6 +247,9 @@ header {
     align-items: center;
     justify-content: center;
     .control-number {
+        width: 80px;
+        display: flex;
+        justify-content: space-between;
         font-family: 'Roboto Regular';
         font-style: normal;
         font-weight: normal;
@@ -347,14 +351,45 @@ header {
 /*****MEDIA*****/
 
 @media (max-width: 1500px) {
+    .header-wrapper-container {
+        width: calc(100% - 40px);
+    }
+
+    .louvre-slider {
+        width: calc(100% - 40px);
+    }
+
+    .wrapper {
+        .wrapper-container {
+            width: calc(100% - 40px);
+            .louvre-container {
+                padding: 114px 0 317px 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 1024px) {
     header::before {
 		position: absolute;
 		z-index: 4;
 	}
 
-    
-    .header-container {
+    .header-wrapper {
+        max-width: 1024px;
+    }
+
+    .header-wrapper-container {
+        width: calc(100% - 40px);
+    }
+
+    .header-container{
+        position: relative;
         align-items: center;
+    }
+    
+    .louvre-slider {
+        width: calc(100% - 40px);
     }
 
     .container-nav {
@@ -428,25 +463,128 @@ header {
     .menu-burger_active span {
         transform: scale(0);
     }
-}
 
-@media (max-width: 1024px) {
-    .header-wrapper {
-        max-width: 1024px;
+    .control {
+        justify-content: end;
+        width: 700px;
+        padding-right: 75px;
+        .control-number {
+            width: 70px;
+            font-size: 20px;
+        }
+        .control-tab {
+            width: 160px;
+            .control-tab-item {
+                width: 12px;
+                height: 12px;
+            }
+        }
     }
 
-    .header-wrapper-container {
-        width: calc(100% - 40px);
-    }
+    .wrapper {
+        .wrapper-container {
+            width: calc(100% - 40px);
+            .louvre-container {
+                width: 405px;
+                padding: 50px 0 192px 0;
+                .louvre-title {
+                    font-size: 50px;
+                }
+                .louvre-subtitle {
+                    font-size: 24px;
+                    line-height: 28.13px;
+                    padding: 25px 0 50px 0;
+                }
+                .louvre-button {
+                    width: 300px;
+                    height: 60px;
+                    font-size: 20px;
+                    line-height: 23.44px;
 
-    .header-container{
-        position: relative;
-        align-items: center;
+                }
+            }
+        }
     }
 }
 
 @media (max-width: 768px) {
+    .welcom-louvre {
+        display: grid;
+        max-width: 768px;
+        height: auto;
+        grid-template-columns: minmax(300px, 768px);
+        grid-template-rows: auto auto;
+        justify-content: center;
+        grid-template-areas: 'louvre-container'
+                             'slider';
+    }
 
+    .louvre-slider-wrapper {
+        height: auto;
+        padding: 0 20px;
+        margin: 0;
+        grid-area: slider;
+    }
+
+    .louvre-slider {
+        width: 100%;
+        height: auto;
+    }
+
+    .slider-wrap {
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .slider-wrap-wrap {
+        .louvre-image {
+            .background-image {
+                display: none;
+            }
+        }
+    }
+
+    .wrapper {
+        display: flex;
+        margin: 0;
+        justify-content: center;
+        grid-area: louvre-container;
+        padding: 0 20px;
+        .wrapper-container {
+            width: auto;
+            .louvre-container {
+                padding: 0 0 50px 0;
+                .louvre-title {
+                    width: 332px;
+                    font-size: 40px;
+                    line-height: 60px;
+                    text-align: center;
+                    margin: 0 auto;
+                }
+                .louvre-subtitle {
+                    font-size: 20px;
+                    line-height: 23.44px;
+                    width: 332px;
+                    padding: 0;
+                    padding-top: 25px;
+                    margin: 0 auto;
+                }
+                .louvre-button {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .control {
+        position: relative;
+        width: 400px;
+        height: 40px;
+        padding-right: 0;
+        margin: 30px auto;
+        bottom: 0;
+    }
 }
 
 @media (max-width: 420px) {
@@ -459,6 +597,46 @@ header {
         .logo-title h1 {
             font-size: 16px;
             line-height: 18px;
+        }
+    }
+
+    .wrapper {
+        .wrapper-container {
+            .louvre-container {
+                width: 100%;
+                .louvre-title {
+                    width: 252px;
+                    font-size: 28px;
+                    line-height: 40px;
+                }
+                .louvre-subtitle {
+                    width: 278px;
+                    font-size: 16px;
+                    line-height: 18.75px;
+                }
+            }
+        }
+    }
+
+    .control {
+        width: 236px;
+        .control-number {
+            width: 56px;
+            font-size: 16px;
+        }
+        .control-tab {
+            width: 79px;
+            margin: 0 23px;
+            .control-tab-item {
+                width: 7px;
+                height: 7px;
+            }
+        }
+        .control-arrow {
+            width: 55px;
+            .arrow {
+                width: 20px;
+            }
         }
     }
 }
