--- a/museum/style/style.css
+++ b/museum/style/style.css
@@ -546,6 +546,118 @@ header {
   max-width: 100%;
 }
 
+/*Picture Explore*/
+.picture-explore {
+  background: #030303;
+}
+
+.explore-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 45.75% 50%;
+      grid-template-columns: 45.75% 50%;
+  padding: 75px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.explore-main .explore-main__title {
+  padding-bottom: 25px;
+}
+
+.explore-main .explore-main__title h2 {
+  font-family: "Forum Regular";
+  font-size: 80px;
+  line-height: 90px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.explore-main .explore-main__line {
+  border-top: #710707 solid 3px;
+  padding-bottom: 75px;
+}
+
+.explore-main .explore-main__subtitle {
+  font-family: "Roboto Light";
+  font-size: 22px;
+  line-height: 38px;
+  color: #FFFFFF;
+}
+
+.explore-main .explore-main__subtitle p {
+  padding-bottom: 25px;
+}
+
+.explore-main .explore-main__subtitle p span {
+  color: #9D8665;
+}
+
+.explore-main .explore-main__subtitle p:last-child {
+  padding-bottom: 0;
+}
+
+.explore-image {
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding-top: 15px;
+}
+
+.explore-image .before {
+  position: absolute;
+  background: url(/museum/assets/images/jpg/Explore/before.jpg);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.explore-image .before .after {
+  position: absolute;
+  background: url(/museum/assets/images/jpg/Explore/after.jpg);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.explore-image .before .after::before, .explore-image .before .after::after {
+  content: '';
+  position: absolute;
+  right: -2px;
+  width: 4px;
+  height: calc(50% - 25px);
+  background: white;
+  z-index: 3;
+}
+
+.explore-image .before .after::before {
+  top: 0;
+  -webkit-box-shadow: 0 -3px 8px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 -3px 8px 1px rgba(0, 0, 0, 0.3);
+}
+
+.explore-image .before .after::after {
+  bottom: 0;
+  -webkit-box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.3);
+}
+
+.explore-image img {
+  width: 100%;
+  height: auto;
+}
+
+/*-----------------------------------------------*/
 /*****MEDIA*****/
 @media (max-width: 1500px) {
   .header-wrapper-container {
