--- a/museum/style/style.scss
+++ b/museum/style/style.scss
@@ -85,8 +85,10 @@ $color1: #030303;
 $color2: #FFFFFF;
 $color3: #9D8665;
 $color4: #000000;
+$color6: #710707;
 $font-forum-regular: 'Forum Regular';
 $font-roboto-thin: 'Roboto Thin';
+$font-roboto-light: 'Roboto Light';
 
 /***Variables End*/
 
@@ -432,6 +434,108 @@ header {
         }
     }
 }
+
+
+/*Picture Explore*/
+
+.picture-explore {
+    background: #030303;
+}
+
+.explore-container {
+    display: grid;
+    grid-template-columns: 45.75% 50%;
+    padding: 75px 0;
+    justify-content: space-between;
+}
+
+.explore-main {
+    .explore-main__title {
+        padding-bottom: 25px;
+        h2 {
+            font-family: $font-forum-regular;
+            font-size: 80px;
+            line-height: 90px;
+            letter-spacing: 5px;
+            text-transform: uppercase;
+            color: $color2;
+        }
+    }
+    .explore-main__line {
+        border-top: $color6 solid 3px;
+        padding-bottom: 75px;
+    }
+    .explore-main__subtitle {
+        font-family: $font-roboto-light;
+        font-size: 22px;
+        line-height: 38px;
+        color: $color2;
+        p {
+            padding-bottom: 25px;
+            span {
+                color: $color3;
+            }
+        }
+        p:last-child {
+            padding-bottom: 0;
+        }
+    }
+}
+
+.explore-image {
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding-top: 15px;
+    .before {
+        position: absolute;
+        background: url(/museum/assets/images/jpg/Explore/before.jpg);
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: auto;
+        background-repeat: no-repeat;
+        background-size: contain;
+        .after {
+            position: absolute;
+            background: url(/museum/assets/images/jpg/Explore/after.jpg);
+            top: 0;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: auto;
+            background-repeat: no-repeat;
+            background-size: contain;
+            &::before,
+            &::after {
+              content: '';
+              position: absolute;
+              right: -2px;
+              width: 4px;
+              height: calc(50% - 25px);
+              background: white;
+              z-index: 3;
+            }
+            &::before {
+                top: 0;
+                box-shadow: 0 -3px 8px 1px rgba(0,0,0,.3);
+              }
+              &::after {
+                bottom: 0;
+                box-shadow: 0 3px 8px 1px rgba(0,0,0,.3);
+              }
+        }
+    }
+}
+
+.explore-image img {
+    width: 100%;
+    height: auto;
+}
+
+
+/*-----------------------------------------------*/
 
 
 /*****MEDIA*****/
