--- a/museum/style/style.scss
+++ b/museum/style/style.scss
@@ -450,6 +450,7 @@ header {
 }
 
 .explore-main {
+    padding-bottom: 241px;
     .explore-main__title {
         padding-bottom: 25px;
         h2 {
@@ -483,48 +484,72 @@ header {
 }
 
 .explore-image {
-    position: relative;
-    width: 100%;
-    height: auto;
     padding-top: 15px;
-    .before {
-        position: absolute;
-        background: url(/museum/assets/images/jpg/Explore/before.jpg);
-        top: 0;
-        left: 0;
-        bottom: 0;
+    .explore-image_container {
+        position: relative;
         width: 100%;
-        height: auto;
-        background-repeat: no-repeat;
-        background-size: contain;
-        .after {
-            position: absolute;
-            background: url(/museum/assets/images/jpg/Explore/after.jpg);
-            top: 0;
-            left: 0;
-            bottom: 0;
+        height: 100%;
+        .before {
+            position: relative;
             width: 100%;
             height: auto;
-            background-repeat: no-repeat;
-            background-size: contain;
-            &::before,
-            &::after {
-              content: '';
-              position: absolute;
-              right: -2px;
-              width: 4px;
-              height: calc(50% - 25px);
-              background: white;
-              z-index: 3;
+            overflow: hidden;
+            img {
+                width: 100%;
+                height: auto;
             }
-            &::before {
-                top: 0;
-                box-shadow: 0 -3px 8px 1px rgba(0,0,0,.3);
-              }
-              &::after {
+            .after {
+                position: absolute;
+                background: url(../assets/images/jpg/Explore/after.jpg);
                 bottom: 0;
-                box-shadow: 0 3px 8px 1px rgba(0,0,0,.3);
-              }
+                width: 100%;
+                height: 100%;
+                background-repeat: no-repeat;
+                background-size: cover;
+                &::before,
+                &::after {
+                  content: '';
+                  position: absolute;
+                  right: -2px;
+                  width: 4px;
+                  height: 39px;
+                  height: calc(50% - 19.5px);
+                  background: white;
+                  z-index: 3;
+                }
+                &::before {
+                    top: 0;
+                  }
+                  &::after {
+                    bottom: 0;
+                  }
+            }
+        }
+        input[type=range]{
+            -webkit-appearance:none;
+            -moz-appearance:none;
+            position: absolute;
+            top: 50%; left: -19.5px;
+            transform: translateY(-50%);
+            background-color: transparent;
+            width: calc(100% + 39px); 
+            z-index: 2;
+          
+            &:focus,
+            &:active {
+            border: none;
+            outline: none;
+          }
+        }
+        input[type=range]::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          border: none;
+          height: 39px;
+          width: 39px;
+          border-radius: 50%;
+          background: transparent;
+          border: 4px solid white;
+          box-shadow: 0 0 8px 1px rgba(0,0,0,.3);
         }
     }
 }
