--- a/museum/style/style.scss
+++ b/museum/style/style.scss
@@ -519,10 +519,10 @@ header {
                 }
                 &::before {
                     top: 0;
-                  }
-                  &::after {
+                }
+                &::after {
                     bottom: 0;
-                  }
+                }
             }
         }
         input[type=range]{
@@ -559,6 +559,138 @@ header {
     height: auto;
 }
 
+
+/*Vidio journey*/
+
+.vidio-journey {
+    background: #FFFFFF;
+}
+
+.vidio-container {
+    padding-top: 90px;
+    .vidio {
+        .main-start-vidio {
+            background-image: url(../assets/images/Video-journey.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 100%;
+            height: 629px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+                background-image: url(../assets/images/Video-journey.jpg);
+                background-repeat: no-repeat;
+                background-size: cover;
+                width: 100%;
+                height: 629px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    }
+
+    .adjustment {
+        width: 100%;
+        height: 85px;
+        background: #000000;
+        display: flex;
+        align-items: center;
+        button {
+            background: #000000;
+            img:hover {
+                filter: invert(71%) sepia(0%) saturate(7%) hue-rotate(206deg) brightness(86%) contrast(86%);
+            }
+
+            .start {
+                width: 23px;
+                height: 30px;
+                margin-right: 41px;
+            }
+
+            .move-line {
+                background: linear-gradient(to right, #24809E 0%, #24809E 47%, #C4C4C4 47%, #C4C4C4 100%);
+                height: 8px;
+                width: 820px;
+                outline: none;
+                transition: background 450ms ease-in;
+                -webkit-appearance: none;
+                margin-right: 41px;
+            }
+
+            .move-line::-webkit-slider-thumb {
+                width: 15px;
+                height: 15px;
+                border-radius: 50%;
+                -webkit-appearance: none;
+                cursor: pointer;
+                background: #FFFFFF;
+            }
+
+            .microphone {
+                width: 38px;
+                height: 30px;
+                margin-right: 20px;
+            }
+
+            .volume-line {
+                background: linear-gradient(to right, #24809E 0%, #24809E 43%, #C4C4C4 43%, #C4C4C4 100%);
+                height: 8px;
+                width: 155px;
+                outline: none;
+                transition: background 450ms ease-in;
+                -webkit-appearance: none;
+                margin-right: 48px;
+            }
+            
+            .volume-line::-webkit-slider-thumb {
+                width: 15px;
+                height: 15px;
+                border-radius: 50%;
+                -webkit-appearance: none;
+                cursor: pointer;
+                background: #FFFFFF;
+            }
+        }
+    }
+}
+
+.full {
+    width: 36px;
+    height: 36px;
+    margin-right: 24px;
+}
+
+.text-container {
+    padding: 40px 0 75px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.text-title {
+    font-family: 'Forum regular';
+    font-size: 80px;
+    line-height: 90px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: #9D8665;
+}
+
+.text-subtitle {
+    max-width: 720px;
+    display: flex;
+    align-items: center;
+}
+
+.text-subtitle p {
+    font-family: 'Roboto Light';
+    font-size: 22px;
+    line-height: 38px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+}
 
 /*-----------------------------------------------*/
 
@@ -816,6 +948,48 @@ header {
             }
         }
     }
+
+    .explore-container {
+        grid-template-columns: 100%;
+        grid-row: auto auto;
+        justify-content: center;
+        padding: 60px 0;
+    }
+
+    .explore-main {
+        padding-bottom: 62px;
+        .explore-main__title {
+            padding-bottom: 20px;
+            h2 {
+                font-size: 50px;
+                line-height: 75px;
+            }
+        }
+        .explore-main__line {
+            padding-bottom: 60px;
+        }
+        .explore-main__subtitle {
+            font-family: $font-roboto-light;
+            font-size: 20px;
+            line-height: 38px;
+            color: $color2;
+            p {
+                padding-bottom: 0px;
+                span {
+                    color: $color3;
+                }
+            }
+            p:last-child {
+                display: none;
+            }
+        }
+    }
+
+    .explore-image {
+        padding-top: 0;
+        max-width: 720px;
+        margin: 0 auto;
+    }
 }
 
 @media (max-width: 768px) {
@@ -944,6 +1118,27 @@ header {
             }
         }
     }
+
+    .explore-container {
+        padding: 40px 0;
+    }
+
+    .explore-main {
+        padding-bottom: 0;
+        .explore-main__title {
+            padding-bottom: 20px;
+            h2 {
+                font-size: 40px;
+                line-height: 60px;
+            }
+        }
+        .explore-main__line {
+            padding-bottom: 40px;
+        }
+        .explore-main__subtitle {
+            display: none;
+        }
+    }
 }
 
 @media (max-width: 420px) {
@@ -1041,6 +1236,62 @@ header {
                         line-height: 18.75px;
                     }
                 }
+            }
+        }
+    }
+
+    .explore-container {
+        padding: 40px 0;
+    }
+
+    .explore-main {
+        .explore-main__title {
+            h2 {
+                font-size: 28px;
+                line-height: 40px;
+            }
+        }
+    }
+
+    .explore-image {
+        .explore-image_container {
+            .before {
+                .after {
+                    position: absolute;
+                    background: url(../assets/images/jpg/Explore/after.jpg);
+                    bottom: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    &::before,
+                    &::after {
+                      content: '';
+                      position: absolute;
+                      right: -1px;
+                      width: 2px;
+                      height: 20px;
+                      height: calc(50% - 10px);
+                      background: white;
+                      z-index: 3;
+                    }
+                    &::before {
+                        top: 0;
+                    }
+                    &::after {
+                        bottom: 0;
+                    }
+                }
+            }
+            input[type=range]::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                border: none;
+                height: 20px;
+                width: 20px;
+                border-radius: 50%;
+                background: transparent;
+                border: 2px solid white;
+                box-shadow: 0 0 8px 1px rgba(0,0,0,0.3);
             }
         }
     }
